# openpe

./: .bumpversion.cfg  .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: publish-test.yml  publish.yml
openpe/: __init__.py  dataset.py  errors.py  module.py  utils.py  webscraper.py
openpe.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_module.py
