[project]
name = "openpe"
version = "0.3.3"
description = "Open Python Package for simple access to Peruvian Open Data"
authors = [{name = "Ivan", email = "your.email@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.7"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"