[project]
name = "openpe"
version = "0.3.5"
description = "Open Python Package for simple access to Peruvian Open Data"
authors = [{name = "Ivan", email = "your.email@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "requests",
    "beautifulsoup4",
    "pandas",
    "tqdm",
    "openpyxl",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"